[gd_scene load_steps=2 format=3 uid="uid://bmgjrm1ib5db2"]

[ext_resource type="Script" uid="uid://bwq3trw4ulmj8" path="res://Resources/Inventory/InventorySlot.gd" id="1_cq15m"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 3
anchors_preset = 0
offset_right = 48.0
offset_bottom = 48.0
script = ExtResource("1_cq15m")

[node name="SlotBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="QuantityLabel" type="Label" parent="TextureButton"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "99"
horizontal_alignment = 1
vertical_alignment = 1